# backend/src/main/java/net/wohlfart/apollo/login/LoginController.java
@@ -1,10 +1,9 @@
 package net.wohlfart.apollo.login;
 
 import io.swagger.annotations.Api;
+import lombok.AllArgsConstructor;
 import lombok.Data;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.server.reactive.ServerHttpResponse;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -18,23 +17,16 @@ import javax.validation.constraints.NotNull;
 @Api
 @Controller
 public class LoginController {
-// serve index.html for all routes, see: https://stackoverflow.com/questions/31415052/angular-2-0-router-not-working-on-reloading-the-browser
 
-    /*
-     * angular single page subpages mapping
-     * this is a redirect but should be a proxy to the index.html
+    public static final String LOGIN_ENDPOINT = "/login";
 
-     */
-    @PostMapping(path = {"/login"})
-    public Mono<Void> authenticate(@ApiIgnore  ServerWebExchange exchange, @RequestBody Authentication authentication) {
-        ServerHttpResponse response = exchange.getResponse();
-        response.setStatusCode(HttpStatus.PRECONDITION_FAILED);
-        response.getHeaders().add(HttpHeaders.LOCATION, "/index.html");
-        return response.setComplete();
-        // Rendering.redirectTo("abc").build()
-        //  return ServerResponse.temporaryRedirect(URI.create("index.html")).build();
+
+    @PostMapping(path = LoginController.LOGIN_ENDPOINT, produces = MediaType.APPLICATION_STREAM_JSON_VALUE)
+    public Mono<TokenCredential> authenticate(@ApiIgnore  ServerWebExchange exchange,
+                                              @RequestBody Authentication authentication) {
+
+        return Mono.just(new TokenCredential("token"));
     }
-
 
 
     @Data
@@ -45,6 +37,15 @@ public class LoginController {
 
         @NotNull
         String password;
+
+    }
+
+    @Data
+    @AllArgsConstructor
+    public static class TokenCredential {
+
+        @NotNull
+        String valur;
 
     }
 
