# metadata/api-docs.json
@@ -7,17 +7,49 @@
     "host": "localhost:8080",
     "basePath": "/",
     "tags": [{
+        "name": "config-controller",
+        "description": "Config Controller"
+    }, {
+        "name": "event-controller",
+        "description": "Event Controller"
+    }, {
         "name": "login-controller",
         "description": "Login Controller"
     }],
     "consumes": ["application/json"],
     "produces": ["application/json"],
     "paths": {
+        "/config": {
+            "get": {
+                "tags": ["config-controller"],
+                "summary": "config",
+                "operationId": "configUsingGET",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ApplicationProperties"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "deprecated": false
+            }
+        },
         "/login": {
             "post": {
                 "tags": ["login-controller"],
                 "summary": "authenticate",
                 "operationId": "authenticateUsingPOST",
+                "produces": ["application/stream+json"],
                 "parameters": [{
                     "in": "body",
                     "name": "authentication",
@@ -31,11 +63,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/MonoOfVoid"
+                            "$ref": "#/definitions/MonoOfTokenCredential"
                         }
                     },
                     "201": {
                         "description": "Created"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/stream-sse": {
+            "get": {
+                "tags": ["event-controller"],
+                "summary": "streamEvents",
+                "operationId": "streamEventsUsingGET",
+                "produces": ["text/event-stream"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/FluxOfServerSentEventOfstring"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -62,6 +120,15 @@
         }
     },
     "definitions": {
+        "ApplicationProperties": {
+            "type": "object",
+            "properties": {
+                "streamSse": {
+                    "type": "string"
+                }
+            },
+            "title": "ApplicationProperties"
+        },
         "Authentication": {
             "type": "object",
             "properties": {
@@ -74,9 +141,32 @@
             },
             "title": "Authentication"
         },
-        "MonoOfVoid": {
+        "FluxOfServerSentEventOfstring": {
             "type": "object",
-            "title": "MonoOfVoid"
+            "properties": {
+                "prefetch": {
+                    "type": "integer",
+                    "format": "int32"
+                }
+            },
+            "title": "FluxOfServerSentEventOfstring"
+        },
+        "MonoOfTokenCredential": {
+            "type": "object",
+            "title": "MonoOfTokenCredential"
+        },
+        "ServerSentEventOfstring": {
+            "type": "object",
+            "title": "ServerSentEventOfstring"
+        },
+        "TokenCredential": {
+            "type": "object",
+            "properties": {
+                "valur": {
+                    "type": "string"
+                }
+            },
+            "title": "TokenCredential"
         }
     }
 }
